<resources>
    <string name="app_name">cse438-assignment4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="player_account">Account: </string>
    <string name="player_chips">Chips: </string>
    <string name="player_wins">Wins: </string>
    <string name="player_losses">Losses: </string>
    <string name="leaderboard">Leaderboard</string>
    <string name="logout">Logout</string>
    <string name="bet_hint">Bet Amount (Enter 0 For Practice)</string>

</resources>
