<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/blackjack_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_account"
                android:textSize="16dp"
                />
            <TextView
                android:id="@+id/blackjack_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="name"
                android:textSize="16dp"
                android:layout_marginRight="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="36dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_chips"
                android:textSize="16dp"
                />
            <TextView
                android:id="@+id/blackjack_chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textSize="16dp"
                android:layout_marginRight="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_wins"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/blackjack_wins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="16dp"
                android:layout_marginRight="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_losses"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/blackjack_losses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="16dp" />
        </LinearLayout>



    </LinearLayout>

    <Button
        android:id="@+id/button_leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        app:layout_constraintTop_toBottomOf="@+id/blackjack_header"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@+id/button_leaderboard"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
        android:id="@+id/card_deck"
        android:layout_width="91dp"
        android:layout_height="123.5dp"
        android:src="@drawable/back"
        app:layout_constraintTop_toBottomOf="@+id/blackjack_header"/>

    <LinearLayout
        android:id="@+id/card_house"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/card_deck">
        <ImageView
            android:id="@+id/houseA"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:src="@drawable/back"
            />
        <ImageView
            android:id="@+id/houseB"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:src="@drawable/back"
            android:layout_marginLeft="-45dp"/>
        <ImageView
            android:id="@+id/houseC"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:layout_marginLeft="-45dp"
            />
        <ImageView
            android:id="@+id/houseD"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:layout_marginLeft="-45dp"
            />
        <ImageView
            android:id="@+id/houseE"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:layout_marginLeft="-45dp"
            />
        <ImageView
            android:id="@+id/houseF"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:layout_marginLeft="-45dp"
            />
        <ImageView
            android:id="@+id/houseG"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:layout_marginLeft="-45dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/card_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/blackjack_footer">
        <ImageView
            android:id="@+id/playerA"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:src="@drawable/back"
            />
        <ImageView
            android:id="@+id/playerB"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:src="@drawable/back"
            android:layout_marginLeft="-45dp"/>
        <ImageView
            android:id="@+id/playerC"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:layout_marginLeft="-45dp"
            />
        <ImageView
            android:id="@+id/playerD"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:layout_marginLeft="-45dp"
            />
        <ImageView
            android:id="@+id/playerE"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:layout_marginLeft="-45dp"
            />
        <ImageView
            android:id="@+id/playerF"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:layout_marginLeft="-45dp"
            />
        <ImageView
            android:id="@+id/playerG"
            android:layout_width="91dp"
            android:layout_height="123.5dp"
            android:layout_marginLeft="-45dp"
            />
    </LinearLayout>




   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/blackjack_footer"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent">
       <EditText
           android:id="@+id/blackjack_bet"
           android:inputType="number"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="28dp"
           android:text="0"
           android:hint="@string/bet_hint"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           android:layout_marginLeft="24dp"
           android:layout_marginRight="24dp"
           android:layout_marginBottom="8dp"/>
   </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>